Fix navbar toggler and logo size on mobile

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,8 +3,14 @@
   font-size: $font-size-lg;
   
   .navbar-brand img.logo {
-    height: 50px;
+    height: 40px;
     width: auto;
     margin-right: 10px;
+  }
+
+  @media (min-width: map-get($grid-breakpoints, "md")) {
+    .navbar-brand img.logo {
+      height: 50px;
+    }
   }
 }
